--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==0.10.1
 requests==2.18.4
+Pillow==5.1.0
 #numpy==1.14.3
-#Pillow==5.1.0
 #matplotlib==2.2.2
 # scikit-learn==0.19.1
 #scipy==1.1.0
