--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ Flask==0.10.1
 requests==2.18.4
 Pillow==5.1.0
 keras==2.1.6
+tensorflow==1.8.0
 #numpy==1.14.3
 #matplotlib==2.2.2
 # scikit-learn==0.19.1
 #scipy==1.1.0
 #cntk-gpu==2.5.1
 #h5py==2.8.0
-#tensorflow==1.9.0
